# my-first-repo

./: .gitignore  Hammer.py  README.md  clean_columns.py  eda_stock.py  hello.py  in_stock_app.py  load_data.py  main.py  pyproject.toml  stock_app.py  univ_anlys_all.py
.dvc/: config
