[project]
name = "my-first-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "duckdb>=1.5.2",
    "dvc>=3.67.1",
    "fastexcel>=0.20.1",
    "openpyxl>=3.1.5",
    "polars>=1.40.0",
    "pyarrow>=23.0.1",
    "python-calamine>=0.6.2",
    "yfinance>=1.3.0",
]
